[gd_scene load_steps=8 format=3 uid="uid://bgcrfgtibkj5r"]

[ext_resource type="Script" path="res://game/scripts/level.gd" id="1_jshbj"]
[ext_resource type="PackedScene" uid="uid://cyrwa7wqy8ua6" path="res://game/scenes/game_over.tscn" id="2_lxw0y"]
[ext_resource type="FontFile" uid="uid://dtp1cmeh2885c" path="res://game/ThaleahFat.ttf" id="6_2ykn3"]
[ext_resource type="PackedScene" uid="uid://doefjgclwafpr" path="res://game/scenes/player/player.tscn" id="6_5ec3s"]

[sub_resource type="Curve2D" id="Curve2D_afxfd"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -186, -107, 0, 0, 0, 0, 172, -109, 0, 0, 0, 0, 172, 98, 0, 0, 0, 0, -187, 98, 0, 0, 0, 0, -186, -106)
}
point_count = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8e88h"]
bg_color = Color(0.533333, 0.533333, 0.533333, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_00ayj"]
bg_color = Color(0.8, 0.713726, 0.941176, 1)

[node name="Level" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_jshbj")
game_over_level = ExtResource("2_lxw0y")

[node name="Player" parent="." instance=ExtResource("6_5ec3s")]

[node name="Path2D" type="Path2D" parent="Player"]
curve = SubResource("Curve2D_afxfd")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-186, -107)
rotation = -0.00558653

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="WaveUI" type="CanvasLayer" parent="."]

[node name="WaveLabel" type="Label" parent="WaveUI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -20.0
offset_right = 64.0
offset_bottom = -9.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("6_2ykn3")
theme_override_font_sizes/font_size = 11
text = "Wave 0"

[node name="WaveProgressBar" type="ProgressBar" parent="WaveUI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -9.0
offset_right = 73.0
offset_bottom = -4.0
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_8e88h")
theme_override_styles/fill = SubResource("StyleBoxFlat_00ayj")
value = 80.0
show_percentage = false

[node name="GameOverUI" type="CanvasLayer" parent="."]

[node name="GameOver" parent="GameOverUI" instance=ExtResource("2_lxw0y")]
visible = false

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
